...
  Widget _list(RadarrSystemStatus status) {
    return LunaListView(
      controller: RadarrSystemStatusNavigationBar.scrollControllers[0],
      children: [
        LunaTableCard(
          content: [
            LunaTableContent(title: 'Version', body: status.lunaVersion),
            if (status.lunaIsDocker)
              LunaTableContent(
                title: 'Package',
                body: status.lunaPackageVersion,
              ),
            LunaTableContent(title: '.NET Core', body: status.lunaNetCore),
            LunaTableContent(title: 'Migration', body: status.lunaDBMigration),
            LunaTableContent(
                title: 'AppData', body: status.lunaAppDataDirectory),
...
