...
          (count) => count + 1,
          ifAbsent: () => 1,
        );
      }
    }

    packageLicenseCounts.putIfAbsent('Dart', () => 1);
    packageLicenseCounts.putIfAbsent('Flutter', () => 1);

    final packages = packageLicenseCounts.entries
        .map((entry) => _OpenSourcePackage(entry.key, entry.value))
        .toList()
      ..sort((a, b) => a.name.toLowerCase().compareTo(b.name.toLowerCase()));

...
